--- a/Assignment 3/A3.ipynb
+++ b/Assignment 3/A3.ipynb
@@ -315,7 +315,8 @@
       "Epoch 24/100, Train Loss: 0.0349, Test Loss: 0.0312, Train Accuracy: 98.9050%, Test Accuracy: 99.0350%\n",
       "Epoch 25/100, Train Loss: 0.0338, Test Loss: 0.0316, Train Accuracy: 98.9400%, Test Accuracy: 99.0267%\n",
       "Epoch 26/100, Train Loss: 0.0327, Test Loss: 0.0282, Train Accuracy: 98.9933%, Test Accuracy: 99.1250%\n",
-      "Epoch 27/100, Train Loss: 0.0320, Test Loss: 0.0298, Train Accuracy: 98.9933%, Test Accuracy: 99.1017%\n"
+      "Epoch 27/100, Train Loss: 0.0320, Test Loss: 0.0298, Train Accuracy: 98.9933%, Test Accuracy: 99.1017%\n",
+      "Epoch 28/100, Train Loss: 0.0311, Test Loss: 0.0281, Train Accuracy: 98.9750%, Test Accuracy: 99.1600%\n"
      ]
     }
    ],
