--- a/Assignment 3/A3.ipynb
+++ b/Assignment 3/A3.ipynb
@@ -87,14 +87,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Load MNIST dataset\n",
+    "x_train, y_train, x_test, y_test = load_mnist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
+    "bz = 32\n",
     "\n",
-    "#Load MNIST dataset\n",
-    "x_train, y_train, x_test, y_test = load_mnist()\n",
+    "\n",
     "\n",
     "# Convert data to PyTorch tensors\n",
     "X_train_tensor = torch.tensor(x_train, dtype=torch.float32)\n",
@@ -107,13 +117,13 @@
     "train_set = torch.utils.data.TensorDataset(X_train_tensor, Y_train_tensor)\n",
     "test_set = torch.utils.data.TensorDataset(X_test_tensor, Y_test_tensor)\n",
     "\n",
-    "train_loader = torch.utils.data.DataLoader(train_set, batch_size=64, shuffle=True)\n",
-    "test_loader = torch.utils.data.DataLoader(test_set, batch_size=64, shuffle=False)\n",
+    "train_loader = torch.utils.data.DataLoader(train_set, batch_size=bz, shuffle=True)\n",
+    "test_loader = torch.utils.data.DataLoader(test_set, batch_size=bz, shuffle=False)\n",
     "\n",
     "train_3d = torch.utils.data.TensorDataset(X_train_3Dtensor, Y_train_tensor)\n",
-    "train_loader_3d = torch.utils.data.DataLoader(train_3d, batch_size=64, shuffle=True)\n",
+    "train_loader_3d = torch.utils.data.DataLoader(train_3d, batch_size=bz, shuffle=True)\n",
     "test_3d = torch.utils.data.TensorDataset(X_train_3Dtensor, Y_train_tensor)\n",
-    "test_loader_3d = torch.utils.data.DataLoader(test_3d, batch_size=64, shuffle=False)"
+    "test_loader_3d = torch.utils.data.DataLoader(test_3d, batch_size=bz, shuffle=False)"
    ]
   },
   {
@@ -196,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,8 +215,8 @@
     "hidden_size_1 = 512\n",
     "hidden_size_2 = 256\n",
     "num_classes = 10\n",
-    "num_epochs = 100\n",
-    "learning_rate = 0.01"
+    "num_epochs = 50\n",
+    "learning_rate = 0.1"
    ]
   },
   {
@@ -269,9 +279,11 @@
     "        x = self.conv1(x)\n",
     "        x = self.relu1(x)\n",
     "        x = self.maxpool1(x)\n",
+    "\n",
     "        x = self.conv2(x)\n",
     "        x = self.relu2(x)\n",
     "        x = self.maxpool2(x)\n",
+    "        \n",
     "        x = self.conv3(x)\n",
     "        x = self.relu3(x)\n",
     "        x = x.view(x.size(0), -1)\n",
@@ -316,7 +328,56 @@
       "Epoch 25/100, Train Loss: 0.0338, Test Loss: 0.0316, Train Accuracy: 98.9400%, Test Accuracy: 99.0267%\n",
       "Epoch 26/100, Train Loss: 0.0327, Test Loss: 0.0282, Train Accuracy: 98.9933%, Test Accuracy: 99.1250%\n",
       "Epoch 27/100, Train Loss: 0.0320, Test Loss: 0.0298, Train Accuracy: 98.9933%, Test Accuracy: 99.1017%\n",
-      "Epoch 28/100, Train Loss: 0.0311, Test Loss: 0.0281, Train Accuracy: 98.9750%, Test Accuracy: 99.1600%\n"
+      "Epoch 28/100, Train Loss: 0.0311, Test Loss: 0.0281, Train Accuracy: 98.9750%, Test Accuracy: 99.1600%\n",
+      "Epoch 29/100, Train Loss: 0.0297, Test Loss: 0.0269, Train Accuracy: 99.0617%, Test Accuracy: 99.1717%\n",
+      "Epoch 30/100, Train Loss: 0.0291, Test Loss: 0.0261, Train Accuracy: 99.0767%, Test Accuracy: 99.1633%\n",
+      "Epoch 31/100, Train Loss: 0.0281, Test Loss: 0.0250, Train Accuracy: 99.1100%, Test Accuracy: 99.2183%\n",
+      "Epoch 32/100, Train Loss: 0.0270, Test Loss: 0.0259, Train Accuracy: 99.1567%, Test Accuracy: 99.1883%\n",
+      "Epoch 33/100, Train Loss: 0.0265, Test Loss: 0.0230, Train Accuracy: 99.1950%, Test Accuracy: 99.3300%\n",
+      "Epoch 34/100, Train Loss: 0.0260, Test Loss: 0.0288, Train Accuracy: 99.1250%, Test Accuracy: 99.0650%\n",
+      "Epoch 35/100, Train Loss: 0.0254, Test Loss: 0.0210, Train Accuracy: 99.2200%, Test Accuracy: 99.3700%\n",
+      "Epoch 36/100, Train Loss: 0.0241, Test Loss: 0.0271, Train Accuracy: 99.2517%, Test Accuracy: 99.1300%\n",
+      "Epoch 37/100, Train Loss: 0.0238, Test Loss: 0.0211, Train Accuracy: 99.2300%, Test Accuracy: 99.3717%\n",
+      "Epoch 38/100, Train Loss: 0.0227, Test Loss: 0.0215, Train Accuracy: 99.2917%, Test Accuracy: 99.3350%\n",
+      "Epoch 39/100, Train Loss: 0.0224, Test Loss: 0.0185, Train Accuracy: 99.3200%, Test Accuracy: 99.4750%\n",
+      "Epoch 40/100, Train Loss: 0.0219, Test Loss: 0.0195, Train Accuracy: 99.3300%, Test Accuracy: 99.4183%\n",
+      "Epoch 41/100, Train Loss: 0.0214, Test Loss: 0.0178, Train Accuracy: 99.3083%, Test Accuracy: 99.4883%\n",
+      "Epoch 42/100, Train Loss: 0.0207, Test Loss: 0.0229, Train Accuracy: 99.3550%, Test Accuracy: 99.2283%\n",
+      "Epoch 43/100, Train Loss: 0.0200, Test Loss: 0.0170, Train Accuracy: 99.3883%, Test Accuracy: 99.5300%\n",
+      "Epoch 44/100, Train Loss: 0.0193, Test Loss: 0.0169, Train Accuracy: 99.4133%, Test Accuracy: 99.5067%\n",
+      "Epoch 45/100, Train Loss: 0.0193, Test Loss: 0.0206, Train Accuracy: 99.4317%, Test Accuracy: 99.3717%\n",
+      "Epoch 46/100, Train Loss: 0.0186, Test Loss: 0.0173, Train Accuracy: 99.4217%, Test Accuracy: 99.4683%\n",
+      "Epoch 47/100, Train Loss: 0.0182, Test Loss: 0.0154, Train Accuracy: 99.4483%, Test Accuracy: 99.5250%\n",
+      "Epoch 48/100, Train Loss: 0.0180, Test Loss: 0.0175, Train Accuracy: 99.4133%, Test Accuracy: 99.4317%\n",
+      "Epoch 49/100, Train Loss: 0.0174, Test Loss: 0.0147, Train Accuracy: 99.4467%, Test Accuracy: 99.5917%\n",
+      "Epoch 50/100, Train Loss: 0.0172, Test Loss: 0.0172, Train Accuracy: 99.4683%, Test Accuracy: 99.4650%\n",
+      "Epoch 51/100, Train Loss: 0.0162, Test Loss: 0.0146, Train Accuracy: 99.5017%, Test Accuracy: 99.5467%\n",
+      "Epoch 52/100, Train Loss: 0.0160, Test Loss: 0.0151, Train Accuracy: 99.5017%, Test Accuracy: 99.5533%\n",
+      "Epoch 53/100, Train Loss: 0.0152, Test Loss: 0.0149, Train Accuracy: 99.5150%, Test Accuracy: 99.5483%\n",
+      "Epoch 54/100, Train Loss: 0.0154, Test Loss: 0.0120, Train Accuracy: 99.5200%, Test Accuracy: 99.6617%\n",
+      "Epoch 55/100, Train Loss: 0.0144, Test Loss: 0.0161, Train Accuracy: 99.5367%, Test Accuracy: 99.4683%\n",
+      "Epoch 56/100, Train Loss: 0.0143, Test Loss: 0.0186, Train Accuracy: 99.5467%, Test Accuracy: 99.3567%\n",
+      "Epoch 57/100, Train Loss: 0.0143, Test Loss: 0.0126, Train Accuracy: 99.5583%, Test Accuracy: 99.6167%\n",
+      "Epoch 58/100, Train Loss: 0.0134, Test Loss: 0.0118, Train Accuracy: 99.6250%, Test Accuracy: 99.6567%\n",
+      "Epoch 59/100, Train Loss: 0.0134, Test Loss: 0.0123, Train Accuracy: 99.5883%, Test Accuracy: 99.6367%\n",
+      "Epoch 60/100, Train Loss: 0.0130, Test Loss: 0.0145, Train Accuracy: 99.5967%, Test Accuracy: 99.5833%\n",
+      "Epoch 61/100, Train Loss: 0.0126, Test Loss: 0.0101, Train Accuracy: 99.6300%, Test Accuracy: 99.7083%\n",
+      "Epoch 62/100, Train Loss: 0.0123, Test Loss: 0.0116, Train Accuracy: 99.6467%, Test Accuracy: 99.6333%\n",
+      "Epoch 63/100, Train Loss: 0.0124, Test Loss: 0.0111, Train Accuracy: 99.6067%, Test Accuracy: 99.6817%\n",
+      "Epoch 64/100, Train Loss: 0.0117, Test Loss: 0.0113, Train Accuracy: 99.6550%, Test Accuracy: 99.6467%\n",
+      "Epoch 65/100, Train Loss: 0.0114, Test Loss: 0.0131, Train Accuracy: 99.6783%, Test Accuracy: 99.5533%\n",
+      "Epoch 66/100, Train Loss: 0.0110, Test Loss: 0.0091, Train Accuracy: 99.6967%, Test Accuracy: 99.7500%\n",
+      "Epoch 67/100, Train Loss: 0.0109, Test Loss: 0.0100, Train Accuracy: 99.6750%, Test Accuracy: 99.7050%\n",
+      "Epoch 68/100, Train Loss: 0.0105, Test Loss: 0.0089, Train Accuracy: 99.6817%, Test Accuracy: 99.7617%\n",
+      "Epoch 69/100, Train Loss: 0.0103, Test Loss: 0.0085, Train Accuracy: 99.7250%, Test Accuracy: 99.7717%\n",
+      "Epoch 70/100, Train Loss: 0.0099, Test Loss: 0.0089, Train Accuracy: 99.7367%, Test Accuracy: 99.7600%\n",
+      "Epoch 71/100, Train Loss: 0.0098, Test Loss: 0.0073, Train Accuracy: 99.7150%, Test Accuracy: 99.8383%\n",
+      "Epoch 72/100, Train Loss: 0.0096, Test Loss: 0.0078, Train Accuracy: 99.7367%, Test Accuracy: 99.7867%\n",
+      "Epoch 73/100, Train Loss: 0.0092, Test Loss: 0.0095, Train Accuracy: 99.7283%, Test Accuracy: 99.7000%\n",
+      "Epoch 74/100, Train Loss: 0.0093, Test Loss: 0.0082, Train Accuracy: 99.7350%, Test Accuracy: 99.7850%\n",
+      "Epoch 75/100, Train Loss: 0.0089, Test Loss: 0.0073, Train Accuracy: 99.7400%, Test Accuracy: 99.8367%\n",
+      "Epoch 76/100, Train Loss: 0.0085, Test Loss: 0.0089, Train Accuracy: 99.7817%, Test Accuracy: 99.7417%\n",
+      "Epoch 77/100, Train Loss: 0.0086, Test Loss: 0.0061, Train Accuracy: 99.7667%, Test Accuracy: 99.8600%\n"
      ]
     }
    ],
